Increased MaxPermSize.